Update Pagina de cadastro.html

--- a/Pagina de cadastro.html
+++ b/Pagina de cadastro.html
@@ -1,46 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<style type="text/css">
-		h4 {font-family: Verdana, Geneva, sans-serif; 
-			font-weight: bold;
-			font-size: 14px;
-			color: #f8ff55;}
-	</style>				
 	<meta charset="UTF-8">
-	<title>Home</title>
+	<title>Cadastro</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<a href="página index.html">
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBHnNwYXptv-YPJ0Rx_ITOFV1YPfgcMoInjw&usqp=CAU" width="20%" height="20%">
+		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBHnNwYXptv-YPJ0Rx_ITOFV1YPfgcMoInjw&usqp=CAU" width="20%" height="20%">
 	</a>
 	<nav> 
 		<ul class="menu"> 		
 			<li><a href="Página index.html">Home</a></li> 		
  			<li><a href="#">Serviços</a></li>
-		</ul> 	
+		</ul>
  		<ul> 	 
 			<li><a href="Pagina de Serviços.html">Nossos Serviços</a></li> 	 
 			<li><a href="pagina de reservas.html">Reservas</a></li>
 			<li><a href="pagina de acomodaçoes.html">Acomodações</a></li>
-		</ul> 		      	 	
-			<li><a href="Pagina de cadastro.html">Cadastro</a></li> </ul> 
-	</nav><br>
-	<hr color="black">				
-	<main>							
-		<h3>Nossa história</h3>
-		<p>
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvpYIV4o16sd7UQ_1JxCgmcp4R8PECS2qtdTXQxs6Y2wbHezKulzQnxmlJ&s=10" style="float:right" width="30%" height="30%">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque arcu justo, gravida in ante nec, fringilla vulputate felis. Morbi ultricies nisi sit amet erat facilisis dapibus. Nullam varius nunc sit amet est faucibus fermentum. Pellentesque nec fermentum tellus. Proin nec lacus vitae arcu maximus tempus. Duis quis velit diam. Integer bibendum nisl velit, a luctus sapien fringilla vel. Curabitur placerat eget massa a venenatis. Mauris scelerisque felis sit amet purus sollicitudin, quis convallis massa scelerisque. Cras eget sapien dictum, accumsan tellus ut, convallis velit. Aenean convallis, nisi sit amet blandit semper, elit ligula aliquet ex, eget euismod turpis ligula et justo. Vivamus ut velit posuere, posuere quam eu, mollis erat. Suspendisse potenti. Maecenas luctus congue felis et bibendum.
-		</p> <hr>
-		<h3>
-			Nossa Missão
-		</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque arcu justo, gravida in ante nec, fringilla vulputate felis. Morbi ultricies nisi sit amet erat facilisis dapibus. Nullam varius nunc sit amet est faucibus fermentum. Pellentesque nec fermentum tellus. Proin nec lacus vitae arcu maximus tempus. Duis quis velit diam. Integer bibendum nisl velit, a luctus sapien fringilla vel. Curabitur placerat eget massa a venenatis. Mauris scelerisque felis sit amet purus sollicitudin, quis convallis massa scelerisque. </p>					
-		<p class="One">OneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOneOnOn</p>
-		<p class="Two">Twotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwotwot</p>
-		<p class="Three">Threethreetheethreethreethreethreethreethreethreethreethreethreethreethree</p>
-		<h4>INCORPORADO BSJDNSKDJKSJDJWKKZKFJSKAN</h4>
-	</main>	
+		</ul> 		      	 
+		   </nav> <hr color="black">
+		    <main>
+		     <h3>Cadastro</h3> <hr>
+		     <img src="https://cdn.mexicodestinos.com/hoteles/krystal-urban-aeropuerto-ciudad-de-mexico-princ.jpg" style="float:right" width="40%" height="40%">
+		  	<form>
+				<label>Nome:</label> 
+				<input type="text" name=""> <br> <br>
+				<label>Data nascimento:</label>
+				<input type="date" name=""> <br> <br>
+				<label>Número de contato:</label>
+				<input type="number" name=""> <br><br>
+				<label>Senha:</label>
+				<input type="password" name=""> <br><br>					       												                    
+                <input type="submit" name="" value="Cadastrar">
+        </main>
 </body>
 </html>
