Update Pagina de reservas.html

--- a/Pagina de reservas.html
+++ b/Pagina de reservas.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-				<meta charset="UTF-8">
-				<title>Reservas</title>
-				<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="UTF-8">
+	<title>Reservas</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-				<a href="página index.html">
-												<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBHnNwYXptv-YPJ0Rx_ITOFV1YPfgcMoInjw&usqp=CAU" width="20%" height="20%">
-								</a>
-				<nav> 
-								<ul class="menu"> 		
-												<li><a href="Página index.html">Home</a></li> 		
- 		                 <li><a href="#">Serviços</a> 	 	
- 		                 <ul> 	 
-												<li><a href="Pagina de Serviços.html">Nossos Serviços</a></li> 	 
-												<li><a href="pagina de acomodaçoes.html">Acomodações</a></li>
-			</ul> 		      	</li> 	
-												<li><a href="Pagina de cadastro.html">Cadastro</a></li> </ul> 
-		   </nav> <hr color="black">
-				<main>
-								<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS073ImDCW06iG9BRaDMSPCGgvdhNpjNj6j1g&usqp=CAU mim" style="float:right" width="40%" height="40%">
-								<label>Quantos dias de estádia</label>
-						       		<select> <br>
-						       										<option>1 dia</option>
-						       										<option>2 dias</option>
-						       										<option>3 dias</option>
-						       										<option>4 dias</option>
-						       										<option>5 dias</option>
-						       										<option>6 dias</option>
-						       										<option>1 semana</option>
-						       										<option>2 semanas</option>
-						      		 </select> <br>
-						       					<label>Opções de quartos</label> 
-                                     <input type="radio" name="quarto"> Solteiro
-                                     <input type="radio" name="quarto"> Casal
-                                     <input type="radio" name="quarto"> Luxo <br>	                 
-						 						                <label>Quantas pessoas a serem hospedadas</label> <br>
-                                     <input type="number" name=""> <br>
-                                     <label>Serviços adicionais</label> <br>
-                           <input type="checkbox" name="Estacionamento"> Estacionamento.<br>
-                           <input type="checkbox" name="Serviço"> Serviço de quarto.<br>
-                           <input type="checkbox" name="Piscina"> Piscina.<br>
-                           <input type="checkbox" name="Cassino">Cassino.<br>
-                           <input type="submit" name="" value="Reservar"> 
-				</main>				
+	<a href="página index.html">
+		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBHnNwYXptv-YPJ0Rx_ITOFV1YPfgcMoInjw&usqp=CAU" width="20%" height="20%">
+	</a>
+	<nav> 
+		<ul class="menu"> 		
+			<li><a href="Página index.html">Home</a></li> 		
+ 			<li><a href="#">Serviços</a></li>
+		</ul>	 	
+ 		<ul> 	 
+			<li><a href="Pagina de Serviços.html">Nossos Serviços</a></li> 	 
+			<li><a href="pagina de acomodaçoes.html">Acomodações</a></li>
+		</ul> 	
+			<li><a href="Pagina de cadastro.html">Cadastro</a></li> </ul> 
+	</nav> <hr color="black">
+	<main>
+		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS073ImDCW06iG9BRaDMSPCGgvdhNpjNj6j1g&usqp=CAU mim" style="float:right" width="40%" height="40%">
+		<label>Quantos dias de estádia</label><br>
+		<select> 
+			<option>1 dia</option>
+			<option>2 dias</option>
+			<option>3 dias</option>
+			<option>4 dias</option>
+			<option>5 dias</option>
+			<option>6 dias</option>
+			<option>1 semana</option>
+			<option>2 semanas</option>
+		</select><br>
+		<label>Opções de quartos</label> 
+        <input type="radio" name="quarto"> Solteiro
+        <input type="radio" name="quarto"> Casal
+        <input type="radio" name="quarto"> Luxo <br>	                 
+		<label>Quantas pessoas a serem hospedadas</label> <br>
+        <input type="number" name=""> <br>
+        <label>Serviços adicionais</label> <br>
+        <input type="checkbox" name="Estacionamento"> Estacionamento.<br>
+        <input type="checkbox" name="Serviço"> Serviço de quarto.<br>
+        <input type="checkbox" name="Piscina"> Piscina.<br>
+        <input type="checkbox" name="Cassino">Cassino.<br>
+        <input type="submit" name="" value="Reservar"> 
+	</main>				
 </body>
 </html>
